--- a/README
+++ b/README
@@ -5,3 +5,13 @@ in Sweden to English expressions, and an array for grammatical notes and fun
 facts.
 
 The idea is to make it searchable and available in the web someday.
+
+====
+UPDATE
+
+I'm now using Anki and Learning With Texts to learn Swedish. It's a very
+effective way, and I would recommend it to anyone who wants to learn a new
+language. This repository will not be updated further, as I have imported my
+vocabulary into Anki decks and my sentences into a LWT text to review.
+
+Ha det bra!
